# actix_hotel

./: Cargo.toml  README.md  docker-compose.yaml
src/: api.rs  app_state.rs  constants.rs  controllers.rs  cronjobs.rs  main.rs  persistence.rs  security.rs  services.rs  util.rs  validation.rs
src/api/: add_room.rs  auth.rs  booking.rs  change_password.rs  comment.rs  error_response.rs  guest.rs  login.rs  promote.rs  refresh_token.rs  register_user.rs  reset_password.rs  room.rs  send_otp.rs
src/api/auth/: change_password.rs  login.rs  logout.rs  promote.rs  refresh_token.rs  register_user.rs  reset_password.rs  send_otp.rs
src/api/booking/: book_room.rs  cancel_booking.rs  find_unoccupied_rooms.rs  get_booking.rs  get_own_bookings.rs  pay_booking.rs
src/api/comment/: add_comment.rs  get_comments.rs  update_comment.rs
src/api/guest/: add_guest.rs  find_guest.rs  get_guest.rs  update_guest.rs
src/api/room/: add_room.rs  delete_room.rs  get_room.rs
src/controllers/: auth.rs  booking.rs  comment.rs  guest.rs  hello_world.rs  room.rs
src/persistence/: bed.rs  booking.rs  booking_guest.rs  comment.rs  guest.rs  invalidated_token.rs  one_time_password.rs  room.rs  user.rs
src/services/: add_room.rs  auth.rs  booking.rs  change_password.rs  comment.rs  email_service.rs  guest.rs  hello_world.rs  login.rs  promote.rs  refresh_token.rs  register_user.rs  reset_password.rs  room.rs  send_otp.rs
src/services/auth/: change_password.rs  login.rs  logout.rs  promote.rs  refresh_token.rs  register_user.rs  reset_password.rs  send_otp.rs
(+16 files in other folders)
