[package]
name = "actix_hotel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }