[package]
name = "actix_hotel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
lettre = "0.11.9"
rand = "0.8.5"
regex = "1.11.0"
sea-orm = {version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time", "with-uuid"]}
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
bcrypt = "0.15"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
uuid = {version = "1.11.0", features = ["v4", "fast-rng"]}
log = "0.4.22"
